Update documentation and build scripts

--- a/js/build.properties
+++ b/js/build.properties
@@ -15,5 +15,6 @@
 # 
 JSDOCDIR=${basedir}/../tools/jsdoc_toolkit-2.4.0/jsdoc-toolkit
 CLOSURECOMP=${basedir}/../tools/google-closure-compiler.r20150920
-WEBPACKDIR=${basedir}/../../node_modules/webpack
-uglify.command=uglifyjs
+WEBPACKDIR=${basedir}/../node_modules/webpack
+uglify.command=${basedir}/../node_modules/.bin/uglifyjs
+webpack.command=${basedir}/../node_modules/.bin/webpack
