--- a/.travis.yml
+++ b/.travis.yml
@@ -8,20 +8,22 @@ env:
 before_install:
   # Qt
   - sudo apt-add-repository --yes ppa:beineri/opt-qt551-trusty
-  - sudo apt-get -qq update
+  - sudo apt-get update -qq
 install:
   # Qt
-  - yes | sudo apt-get install --yes qt55base qt55imageformats qt55svg qtdeclarative5-dev qt5-qmake
+  - sudo apt-get -y install qt55[QTPACKAGE]
   
   - npm install
 before_script:
-  - QTDIR="/opt/qt55"
-  - QTBIN="/opt/qt55/bin"
-  - PATH="$QTDIR/bin:$PATH"
-  - source /opt/qt55/bin/qt55-env.sh
+  #- QTDIR="/opt/qt55"
+  #- QTBIN="/opt/qt55/bin"
+  #- PATH="$QTDIR/bin:$PATH"
+  #- source /opt/qt55/bin/qt55-env.sh
 script:
   - source /opt/qt55/bin/qt55-env.sh
   - which qmake
+  - /opt/qt55/bin/qmake
+  - make
   - ant test
 branches:
   only:
