--- a/.travis.yml
+++ b/.travis.yml
@@ -5,25 +5,26 @@ node_js:
   - "8"
 env:
   - CXX=g++-4.8
-
 before_install:
-  # Qt5
-  #- sudo apt-get clean
-  #- sudo add-apt-repository -y ppa:beineri/opt-qt562-trusty
+  # Qt
   - sudo apt-add-repository --yes ppa:beineri/opt-qt551-trusty
-  - sudo apt-get -qq update
-
+  - sudo apt-get update -qq
 install:
-   # Qt5
-  - yes | sudo apt-get install --yes qt55base qt55imageformats qt55svg qtdeclarative5-dev qt5-qmake
-  #- source /opt/qt56/bin/qt56-env.sh
+  # Qt
+  - sudo apt-get -y install qt55[QTPACKAGE]
+  
   - npm install
 before_script:
-  - QTDIR="/opt/qt56"
-  - PATH="$QTDIR/bin:$PATH"
-  - source /opt/qt55/bin/qt55-env.sh
+  #- QTDIR="/opt/qt55"
+  #- QTBIN="/opt/qt55/bin"
+  #- PATH="$QTDIR/bin:$PATH"
+  #- source /opt/qt55/bin/qt55-env.sh
 script:
+  #- source /opt/qt55/bin/qt55-env.sh
+  - xvfb-run make test
   - ant test
+  - cd qt
+  #- ant test.qt.nodeunit
 branches:
   only:
     - master
