--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,10 @@ before_script:
   #- source /opt/qt55/bin/qt55-env.sh
 script:
   #- source /opt/qt55/bin/qt55-env.sh
+  - export QT_QPA_PLATFORM=offscreen
   - ant test
-  #- cd qt
-  #- ant test.qt.nodeunit
+  - cd qt
+  - ant test.qt.nodeunit
 branches:
   only:
     - master
