--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ install:
   # Qt
   - sudo apt-get -y install qt55[QTPACKAGE]
   - sudo apt-get -y install qmlscene qt5-default
-  
   - npm install
 before_script:
   #- QTDIR="/opt/qt55"
@@ -21,20 +20,17 @@ before_script:
   #- PATH="$QTDIR/bin:$PATH"
 script:
   #- source /opt/qt55/bin/qt55-env.sh
-
-  - export QT_QPA_PLATFORM=offscreen
+  #- export QT_QPA_PLATFORM=offscreen
   - ant test
-  - cd qt
-  - which qmake
-  - which qmlscene
-  - /usr/bin/qmake -query
-
-  - cd qt
+  #- cd qt
+  #- which qmake
+  #- which qmlscene
+  #- /usr/bin/qmake -query
   # QFontDatabase: Cannot find font directory /usr/lib/x86_64-linux-gnu/fonts - is Qt installed correctly?
   #- sudo ln -s /usr/share/fonts /usr/lib/x86_64-linux-gnu/fonts
-
   # /usr/bin/qmlscene NodeunitRun.qml -I ../FileReader/imports/
-   - ant test.qt.nodeunit
+  #- cd qt
+  #- ant test.qt.nodeunit
 branches:
   only:
     - master
