[Facing Error]module QtQuick is not installed
Try to install QtQuick* on script

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   # Qt
   - sudo apt-get -y install qt55[QTPACKAGE]
   - sudo apt-get -y install qmlscene qt5-default
+  - sudo apt-get install qml-module-qtquick*
   - npm install
 before_script:
   #- QTDIR="/opt/qt55"
