--- a/.travis.yml
+++ b/.travis.yml
@@ -14,23 +14,20 @@ install:
   - sudo apt-get -y install qt55[QTPACKAGE]
   - sudo apt-get -y install qmlscene qt5-default qtdeclarative5-dev qtbase5-dev
   - npm install
-before_script:
-  #- QTDIR="/opt/qt55"
-  #- QTBIN="/opt/qt55/bin"
-  #- PATH="$QTDIR/bin:$PATH"
 script:
+  # [Error] module QtQuick is not installed
   - source /opt/qt55/bin/qt55-env.sh
+  # [Error] [exec] QXcbConnection: Could not connect to display
   - export QT_QPA_PLATFORM=offscreen
+  # Error QFontDatabase: Cannot find font directory /usr/lib/x86_64-linux-gnu/fonts - is Qt installed correctly?
+  - sudo ln -s /usr/share/fonts /usr/lib/x86_64-linux-gnu/fonts
+
+  # iLib Full builde / Running nodeunit test.
   - ant test
   - which qmake
   - which qmlscene
-  #- /usr/bin/qmake -query
-  # QFontDatabase: Cannot find font directory /usr/lib/x86_64-linux-gnu/fonts - is Qt installed correctly?
-  - sudo ln -s /usr/share/fonts /usr/lib/x86_64-linux-gnu/fonts
-  - cd qt
-  - cd NodeunitTest
+  - cd qt/NodeunitTest
   - /usr/bin/qmlscene NodeunitRun.qml -I ../FileReader/imports/
-  #- ant test.qt.nodeunit
 branches:
   only:
     - master
