--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,10 @@ script:
   - ant test
   - which qmake
   - which qmlscene
-  - cd qt/NodeunitTest
-  - /usr/bin/qmlscene NodeunitRun.qml -I ../FileReader/imports/
+  - cd qt
+  - ant test.qt.nodeunit
+  #- cd qt/NodeunitTest
+  #- /usr/bin/qmlscene NodeunitRun.qml -I ../FileReader/imports/
 branches:
   only:
     - master
