--- a/.travis.yml
+++ b/.travis.yml
@@ -24,13 +24,12 @@ script:
 
   # iLib Full builde / Running nodeunit test.
   - ant test
-  - which qmake
-  - which qmlscene
-  - cd qt/NodeunitTest
-  - /usr/bin/qmlscene NodeunitRun.qml -I ../FileReader/imports/
+  #- which qmake
+  #- which qmlscene
+  #- cd qt/NodeunitTest
+  #- /usr/bin/qmlscene NodeunitRun.qml -I ../FileReader/imports/
 branches:
   only:
     - master
     - development
 sudo: required
-#dist: precise
