--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
         "trireme": "^0.9.0",
         "uglify-js": "^3.3.0",
         "uglifyjs-webpack-plugin": "^1.0.0",
-        "webpack": "^3.10.0"
+        "webpack": "^3.10.0",
+        "ilib-webpack-loader": "^0.9.0"
     },
     "scripts": {
         "test": "ant test",
