Changed a way of running qt test in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,8 @@ script:
   - ant test
   #- which qmake
   #- which qmlscene
-  - cd qt
-  - ant test.qt.nodeunit
-  #- cd qt/NodeunitTest
-  #- /usr/bin/qmlscene NodeunitRun.qml -I ../FileReader/imports/
+  - cd qt/NodeunitTest
+  - /usr/bin/qmlscene NodeunitRun.qml -I ../FileReader/imports/
 branches:
   only:
     - master
