Add travis_wait property for the collation test

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - sudo apt-add-repository --yes ppa:beineri/opt-qt551-trusty
   - sudo apt-get update -qq
 install:
+  - travis_wait 30 mvn install
   # Qt
   - sudo apt-get -y install qt55[QTPACKAGE]
   - sudo apt-get -y install qmlscene qt5-default qtdeclarative5-dev qtbase5-dev
