--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,10 @@ script:
   #- which qmlscene
   - cd qt/NodeunitTest
   - /usr/bin/qmlscene NodeunitRun1.qml -I ../FileReader/imports/
-  - /usr/bin/qmlscene NodeunitRun1.qml -I ../FileReader/imports/
-  - /usr/bin/qmlscene NodeunitRun1.qml -I ../FileReader/imports/
-  - /usr/bin/qmlscene NodeunitRun1.qml -I ../FileReader/imports/
-  - /usr/bin/qmlscene NodeunitRun1.qml -I ../FileReader/imports/
+  - /usr/bin/qmlscene NodeunitRun2.qml -I ../FileReader/imports/
+  - /usr/bin/qmlscene NodeunitRun3.qml -I ../FileReader/imports/
+  #- /usr/bin/qmlscene NodeunitRun4.qml -I ../FileReader/imports/
+  #- /usr/bin/qmlscene NodeunitRun5.qml -I ../FileReader/imports/
 branches:
   only:
     - master
