--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,16 @@ build.properties
 /js/locale/
 /js/output/
 /js/package.json
+js/.ant-targets-build.xml
 **/localeinfo.json
 /node_modules/*
 js/node_modules/*
 !/node_modules/nodeunit/
 !/node_modules/.bin/nodeunit
+qt/.ant-targets-build.xml
+qt/FileReader/Makefile*
+qt/FileReader/debug/
+qt/FileReader/imports/
+qt/FileReader/release/
+qt/output/
+
