--- a/qt/build.xml
+++ b/qt/build.xml
@@ -125,7 +125,7 @@ limitations under the License.
 		</copy>
 	</target>
 	
-	<target name="test.qt" depends="" description="Run the unit tests in the qt test framework. Make sure you have Qt 5.4 or later, and it is the first Qt in your path.">
+	<target name="test.qt" depends="export" description="Run the unit tests in the qt test framework. Make sure you have Qt 5.4 or later, and it is the first Qt in your path.">
 		<sequential>
 			<exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/UnitTest" failifexecutionfails="true" failonerror="true">
 				<env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -148,16 +148,207 @@ limitations under the License.
 				<env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
 				<arg line="NodeunitRunAll.qml"/>
 			</exec>
-			<exec osfamily="mac" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
-				<env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
-				<arg line="NodeunitRunAll.qml"/>
-			</exec>
 			<exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
 				<env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
 				<arg line="NodeunitRunAll.qml"/>
 			</exec>
 		</sequential>
 	</target>
+
+    <target name="test.address.nu" depends="filereader" description="Run the address unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_address.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_address.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.calendar.nu" depends="filereader" description="Run the calendar unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_calendar.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_calendar.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.collate.nu" depends="filereader" description="Run the collate unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_collate.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_collate.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.ctype.nu" depends="filereader" description="Run the ctype unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_ctype.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_ctype.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.date.nu" depends="filereader" description="Run the date unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_date.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_date.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.daterange.nu" depends="filereader" description="Run the daterange unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_daterange.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_daterange.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.durfmt.nu" depends="filereader" description="Run the durfmt unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_durfmt.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_durfmt.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.maps.nu" depends="filereader" description="Run the maps unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_maps.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_maps.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.name.nu" depends="filereader" description="Run the name unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_name.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_name.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.number.nu" depends="filereader" description="Run the number unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_number.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_number.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.phone.nu" depends="filereader" description="Run the phone unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_phone.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_phone.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.root.nu" depends="filereader" description="Run the root unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_root.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_root.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.strings_ext.nu" depends="filereader" description="Run the strings_ext unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_strings_ext.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_strings_ext.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.units.nu" depends="filereader" description="Run the units unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_units.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_units.qml"/>
+            </exec>
+        </sequential>
+    </target>
+
+    <target name="test.util.nu" depends="filereader" description="Run the util unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="${QTBIN}/qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_util.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="${QTBIN}/qmlscene.exe" dir="${build.base}/NodeunitTest" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_util.qml"/>
+            </exec>
+        </sequential>
+    </target>
 		
 	<!-- Should not run the tests from an automated build, because qmlscene doesn't exit at the end. They should
 	     only be run by hand. -->
