--- a/build.xml
+++ b/build.xml
@@ -50,6 +50,7 @@ limitations under the License.
 
 	<target name="export" description="Export everything that other subprojects will need to build.">
 		<iterate target="export"/>
+        <copy file="README.md" todir="${build.export}/package" />
 	</target>
 
 	<target name="all" description="Build everything. This is the target that the build should run.">
