--- a/package.json
+++ b/package.json
@@ -58,6 +58,15 @@
     "devDependencies": {
         "cldr-data": "^32.0.0",
         "ejs": "^2.5.2",
+        "grunt": "^1.0.3",
+        "grunt-cli": "^1.2.0",
+        "grunt-contrib-clean": "^1.1.0",
+        "grunt-contrib-compress": "^1.4.3",
+        "grunt-contrib-copy": "^1.0.0",
+        "grunt-md5": "^0.1.12",
+        "grunt-md5sum": "^2.0.1",
+        "grunt-mkdir": "^1.0.0",
+        "grunt-move": "^1.0.0",
         "http-server": "^0.11.1",
         "nodeunit": "0.12.0",
         "should": ">=11.1.0",
