--- a/package.json
+++ b/package.json
@@ -63,10 +63,11 @@
         "grunt-contrib-clean": "^1.1.0",
         "grunt-contrib-compress": "^1.4.3",
         "grunt-contrib-copy": "^1.0.0",
-        "grunt-md5": "^0.1.12",
+        "grunt-http-server": "^2.1.0",
         "grunt-md5sum": "^2.0.1",
         "grunt-mkdir": "^1.0.0",
         "grunt-move": "^1.0.0",
+        "grunt-shell": "^2.1.0",
         "http-server": "^0.11.1",
         "nodeunit": "0.12.0",
         "should": ">=11.1.0",
