--- a/package.json
+++ b/package.json
@@ -63,11 +63,15 @@
         "grunt-contrib-clean": "^1.1.0",
         "grunt-contrib-compress": "^1.4.3",
         "grunt-contrib-copy": "^1.0.0",
+        "grunt-contrib-uglify": "^3.4.0",
+        "grunt-eslint": "^21.0.0",
         "grunt-http-server": "^2.1.0",
+        "grunt-jsdoc": "^2.2.1",
         "grunt-md5sum": "^2.0.1",
         "grunt-mkdir": "^1.0.0",
         "grunt-move": "^1.0.0",
         "grunt-shell": "^2.1.0",
+        "grunt-text-replace": "^0.4.0",
         "nodeunit": "0.12.0",
         "should": ">=11.1.0",
         "tap": "^10.0.2",
