--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "should": ">=11.1.0",
         "tap": "^10.0.2",
         "trireme": "^0.9.0",
-        "uglify-js": "^3.3.0"
+        "uglify-js": "^3.3.0",
+        "xml2json": "^0.11.2"
     }
 }
