--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - sudo apt-get -y install qt55[QTPACKAGE]
   - sudo apt-get -y install qmlscene qt5-default qtdeclarative5-dev qtbase5-dev
   - npm install
+  - export PATH=$PWD/node_modules/.bin:$PATH
 script:
   # [Error] module QtQuick is not installed
   - source /opt/qt55/bin/qt55-env.sh
