--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
         "grunt-contrib-nodeunit": "~0.4.1",
         "grunt-contrib-uglify": "~0.5.0",
         "http-server": "^0.11.1",
-        "ilib-webpack-loader": "^0.9.2",
-        "ilib-webpack-plugin2": "^0.9.1",
+        "ilib-webpack-loader": "^1.0.0",
+        "ilib-webpack-plugin": "^1.0.0",
         "iso-15924": "^2.0.0",
         "jsdoc2": "^2.4.0",
         "should": ">=11.1.0",
