Rollback target 'doc'. if it doesn't exist, that target will fail at the top level

--- a/qt/build.xml
+++ b/qt/build.xml
@@ -323,4 +323,5 @@ limitations under the License.
         </sequential>
     </target>
 	<target name="test" description="Run all tests and build all reports" />
+    <target name="doc" />
 </project>
