Make sure that the npm publish tag is "experimental"
Automatically set the publish tag on npm to "experimental"
for all new releases. Once it has been vetted, the "latest"
tag can be updated to point to this new version and npm update
will update everyone's ilib installation to this version.
Anyone wanting the latest and greatest which is possibly
unstable can use "npm install ilib@experimental"

--- a/package.json
+++ b/package.json
@@ -89,5 +89,8 @@
         "test": "ant test",
         "build.web": "webpack -p",
         "watch": "webpack --watch"
+    },
+    "publishConfig": {
+        tag: "experimental"
     }
 }
