Fixed minor syntax problem

--- a/package.json
+++ b/package.json
@@ -91,6 +91,6 @@
         "watch": "webpack --watch"
     },
     "publishConfig": {
-        tag: "experimental"
+        "tag": "experimental"
     }
 }
