Most classes now use the index.js to get the ilib main
The index.js dynamically determines which loader to use, so that
when ilib is used under node, it uses the node loader, but when
under webpack, it uses the webpack loader. This way, classes can
depend on this index to load the right loader automatically.

--- a/js/build.xml
+++ b/js/build.xml
@@ -342,8 +342,10 @@ limitations under the License.
             <fileset dir="${build.lib}">
                 <include name="ilib-node*"/>
                 <include name="ilib-qt*"/>
-                <include name="ilib-getdata.js"/>
                 <include name="ilib-unpack.js"/>
+            </fileset>
+            <fileset dir="${build.base}">
+                <include name="index.js"/>
             </fileset>
 			<mapper type="glob" from="*.js" to="*.js"/>
 		</apply>
@@ -467,6 +469,7 @@ limitations under the License.
 		<copy todir="${build.export}/src/js">
 			<fileset dir="${build.base}">
 				<include name="lib/**"/>
+				<include name="index.js"/>
 				<include name="build.xml"/>
 				<include name="build.properties"/>
 				<include name="data/locale/**/*.json"/>
@@ -494,6 +497,7 @@ limitations under the License.
 				<exclude name="ilib-qt.js"/>
 				<exclude name="ilib-rhino.js"/>
 				<exclude name="ilib-enyo.js"/>
+				<exclude name="index.js"/>
             </fileset>
             <fileset dir="${build.export}/js/dyncode">
                 <include name="Loader.js"/>
@@ -505,6 +509,11 @@ limitations under the License.
 				<include name="ilib-full-dyn.js"/>
 				<include name="ilib-full-dyn-compiled.js"/>
 			</fileset>
+		</copy>
+		<copy todir="${build.export}/package">
+            <fileset dir="${build.export}/js/dyncode">
+                <include name="index.js"/>
+            </fileset>
 		</copy>
 		<copy todir="${build.export}/package/locale">
 			<fileset dir="${build.locale}">
