Work around problem where uglify was removing the !defineLocaleData comment
Without the !defineLocaleData comment, the plugin and loader do not have
any target where they could put their output and therefore there is no
dependency on the locale data, which therefore never gets included into
the webpacked code.

The problem was that webpack thought the code block with only the comment
in it was empty, so the dead-code optimizer removed that entire block,
including the comment. The solution was to put the comment in another
file and require that file in that block so that the dead code optimizer
does not think that block is empty.

--- a/js/build.xml
+++ b/js/build.xml
@@ -342,6 +342,7 @@ limitations under the License.
             <fileset dir="${build.lib}">
                 <include name="ilib-node*"/>
                 <include name="ilib-qt*"/>
+                <include name="ilib-webpack*"/>
                 <include name="ilib-unpack.js"/>
             </fileset>
             <fileset dir="${build.base}">
@@ -359,7 +360,7 @@ limitations under the License.
 			<arg value="-c"/>
 			<arg value="-v"/>
 			<fileset dir="${build.lib}" includes="*.js"  excludes="ilib.js,ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
-			<fileset dir="${build.lib}" includes="ilib-node*.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
+			<fileset dir="${build.lib}" includes="ilib-node*.js,ilib-webpack.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
 			<mapper type="glob" from="*.js" to="*.js"/>
 		</apply>
 		<apply osfamily="unix" executable="node" dest="${build.output.dyncode}" parallel="false" force="true">
