Use the heap size in the build.xml instead of the travis yml

--- a/js/build.properties
+++ b/js/build.properties
@@ -18,3 +18,4 @@ CLOSURECOMP=${basedir}/../tools/google-closure-compiler.r20150920
 WEBPACKDIR=${basedir}/../node_modules/webpack
 uglify.location=${basedir}/../node_modules/uglify-js
 webpack.command=${basedir}/../node_modules/.bin/webpack
+webpack.heap.size=4096
