--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
   # Qt
   - sudo apt-get -y install qt55[QTPACKAGE]
   - sudo apt-get -y install qmlscene qt5-default qtdeclarative5-dev qtbase5-dev
+  - rm -rf node_modules
   - npm install
   - export PATH=$PWD/node_modules/.bin:$PATH
   - export NODE_OPTIONS="--max-old-space-size=3072"
