--- a/js/build.xml
+++ b/js/build.xml
@@ -136,7 +136,7 @@ limitations under the License.
 				<arg value="--env.locales=@{locales}"/>
 				<arg value="--env.target=@{target}"/>
 				<arg value="--env.ilibRoot=${build.base}"/>
-				<arg value="--env.tempDir=${build.output.js}"/>
+				<arg value="--env.tempDir=${build.output}"/>
 			</exec>
 			<exec osfamily="windows" executable="webpack.bat" dir="${build.base}" failifexecutionfails="@{failquit}"  failonerror="@{failquit}">
 				<env key="NODE_OPTIONS" value="--max-old-space-size=3072"/>
@@ -146,7 +146,7 @@ limitations under the License.
 				<arg value="--env.locales=@{locales}"/>
                 <arg value="--env.target=@{target}"/>
                 <arg value="--env.ilibRoot=${build.base}"/>
-                <arg value="--env.tempDir=${build.output.js}"/>
+                <arg value="--env.tempDir=${build.output}"/>
 			</exec>
 		</sequential>
 	</macrodef>
